# spotify-dashboard

./: .env  .gitignore  Cargo.toml  README.md
modules/extract-text/: README.md  app.py  client.py  extract.py  jsonformer.py  main.py  pyproject.toml  requirements.txt  tests.py
modules/extract-text/tests/: test_extractor.py
modules/tele-bot/: Cargo.toml
modules/tele-bot/src/: main.rs  state.rs
modules/tele-bot/src/bot/: handlers.rs
modules/tele-bot/src/detector/: genre.rs  language.rs  mod.rs  mood.rs
modules/tele-bot/src/utils/: stream.rs
src/: error.rs  genre_detector.rs  main.rs  state.rs
src/auth/: spotify.rs
src/bot/: commands.rs  handlers.rs  mod.rs
src/handlers/: auth.rs  me.rs  mod.rs  recent.rs  top.rs
src/models/: auth.rs  spotify.rs
src/utils/: stream.rs
