[package]
name = "spotify-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenvy = "0.15"

reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls"
] }

rspotify = { version = "0.12", default-features = false, features = [
  "client-reqwest",
  "reqwest-rustls-tls"
] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
